# advent-of-code

./: .gitignore  README.md
aoc2018/: Cargo.toml
aoc2019/: .gitignore  CMakeLists.txt  conanfile.txt
aoc2019/inputs/: star03-1.txt  star03-2.txt  star06.txt
aoc2019/src/star01/: common.cpp  common.h  part1.cpp  part2.cpp
aoc2019/src/star02/: part1.cpp  part2.cpp
aoc2019/src/star03/: part1.cpp  part2.cpp
aoc2019/src/star04/: part1.cpp  part2.cpp
aoc2019/src/star05/: part1.cpp  part2.cpp
aoc2019/src/star06/: part1.cpp  part2.cpp
aoc2019/src/star07/: part1.cpp  part2.cpp
aoc2019/src/star08/: part1.cpp  part2.cpp
aoc2019/src/star10/: part1.cpp  part2.cpp
aoc2019/src/star12/: part1.cpp  part2.cpp
aoc2019/src/star14/: part1.cpp
aoc2019/src/star16/: part1.cpp  part2.cpp
aoc2019/src/utils/: intcode.cpp  intcode.h  printing.h  reading.h
aoc2020/: Cargo.toml
aoc2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
aoc2021/: Cargo.toml
aoc2023/: Cargo.toml
aoc2024/: .gitignore  go.mod
aoc2024/day01/: main.go
aoc2024/day02/: main.go
aoc2024/day03/: main.go
aoc2024/day04/: main.go
aoc2024/day05/: main.go
aoc2024/day07/: main.go
aoc2024/day08/: main.go
aoc2024/day09/: main.go
aoc2024/day10/: main.go
aoc2024/day11/: main.go
aoc2024/day12/: main.go
aoc2024/day13/: main.go
aoc2024/day14/: draw.py  main.go
aoc2024/day15/: main.go  test.txt
aoc2024/day16/: main.go
aoc2024/day17/: day17p2.py  main.go
aoc2024/day18/: main.go
aoc2024/day19/: main.go
aoc2024/day20/: main.go
aoc2024/day21/: main.go
aoc2024/day22/: main.go
aoc2024/day23/: main.go
aoc2024/day24/: after.gv  before.gv  graph.py  main.go
aoc2024/day25/: input.txt  main.go
aoc2024/utils/: utils.go
